adição dos mapas, imagens e info dos pontos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <section class="visit">
             <p class="animate-up">Ajude um Pet a se alimentar hoje!</p>
 
-            <a href="#" title="Encontre pontos no Mapa" class="animate-up">
+            <a href="stops.html" title="Encontre pontos no Mapa" class="animate-up">
               <img src="./public/images/arrow.svg" alt="Ir para o Mapa" />
             </a>
           </section>
