--- a/stop.html
+++ b/stop.html
@@ -1,126 +1,126 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ponto 1 | PetStop</title>
 
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin=""
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ponto 1 | PetStop</title>
 
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script
-      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-      crossorigin=""
-    ></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
-    <link rel="icon" href="./public/images/logo-icon.png" />
-    <link rel="stylesheet" href="./public/css/main.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/page-stop.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
-  <body>
-    <div id="page-stop">
-      <aside class="animate-rigth sidebar">
+  <link rel="icon" href="./public/images/logo-icon.png" />
+  <link rel="stylesheet" href="./public/css/main.css" />
+  <link rel="stylesheet" href="./public/css/animations.css" />
+  <link rel="stylesheet" href="./public/css/page-stop.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet" />
+</head>
 
-        <img src="./public/images/map-marker.svg" alt="Ponto">
+<body>
+  <div id="page-stop">
+    <aside class="animate-rigth sidebar">
 
-        <footer>
-          <button onclick="history.back()">
-            <img src="./public/images/arrow-back.svg" alt="Voltar">
+      <img src="./public/images/map-marker.svg" alt="Ponto">
+
+      <footer>
+        <button onclick="history.back()">
+          <img src="./public/images/arrow-back.svg" alt="Voltar">
+        </button>
+      </footer>
+
+
+
+    </aside>
+
+    <main class="animate-appear with-sidebar">
+      <div class="stop-details">
+        <img src="./public/images/home.jpg" alt="" />
+
+        <div class="images">
+          <button onclick="selectImage(event)" class="active" type="button">
+            <img src="https://source.unsplash.com/random?id=1" alt=" Ponto 1" />
           </button>
-        </footer>
 
+          <button onclick="selectImage(event)" type="button">
+            <img src="https://source.unsplash.com/random?id=2" alt=" Ponto 1" />
+          </button>
 
+          <button onclick="selectImage(event)" type="button">
+            <img src="https://source.unsplash.com/random?id=3" alt=" Ponto 1" />
+          </button>
 
-      </aside>
+          <button onclick="selectImage(event)" type="button">
+            <img src="https://source.unsplash.com/random?id=4" alt=" Ponto 1" />
+          </button>
 
-      <main class="animate-appear with-sidebar">
-        <div class="stop-details">
-          <img src="./public/images/home.jpg" alt="" />
+          <button onclick="selectImage(event)" type="button">
+            <img src="https://source.unsplash.com/random?id=5" alt=" Ponto 1" />
+          </button>
 
-          <div class="images">
-            <button class="active" type="button">
-              <img src="./public/images/home.jpg" alt=" Ponto 1" />
-            </button>
-
-            <button class="" type="button">
-              <img src="./public/images/home.jpg" alt=" Ponto 1" />
-            </button>
-
-            <button class="" type="button">
-              <img src="./public/images/home.jpg" alt=" Ponto 1" />
-            </button>
-
-            <button class="" type="button">
-              <img src="./public/images/home.jpg" alt=" Ponto 1" />
-            </button>
-
-            <button class="" type="button">
-              <img src="./public/images/home.jpg" alt=" Ponto 1" />
-            </button>
-
-            <button class="" type="button">
-              <img src="./public/images/home.jpg" alt=" Ponto 1" />
-            </button>
-          </div>
-
-          <div class="stop-details-content">
-            <h1>Ponto 1</h1>
-            <p>
-              Ponto localizado em x lugar. Ponto de Referência: próximo ao
-              xxxxxxxxxxxxxxxxxxxx
-            </p>
-
-            <div class="map-container">
-              <div id="mapip"></div>
-
-              <footer>
-                <a href="">Ver rotas no Google Maps</a>
-              </footer>
-            </div>
-
-            <hr />
-
-            <h2>Instruções para visita</h2>
-
-            <p>Você pode contribuir com ração e água e muito amor =D</p>
-
-            <div class="open-details">
-              <div class="hour">
-                <img src="./public/images/clock.svg" alt="Horários" />
-                Aguardamos sua visita
-              </div>
-              <div class="open-on-weekends">
-                <img src="./public/images/info.svg" alt="Informações" />
-                Venha sempre que puder!
-              </div>
-            </div>
-
-            <button class="primary-button" type="button">
-              <img
-                src="./public/images/whatsapp.svg"
-                alt="Chamar no WhatsApp"
-              />
-              Entrar em Contato
-            </button>
-          </div>
+          <button onclick="selectImage(event)" type="button">
+            <img src="https://source.unsplash.com/random?id=6" alt=" Ponto 1" />
+          </button>
         </div>
-      </main>
-    </div>
 
-    <script src="./public/scripts/page-stop.js"></script>
-  </body>
+        <div class="stop-details-content">
+          <h1>Ponto 1</h1>
+          <p>
+            Ponto localizado em x lugar. Ponto de Referência: próximo ao
+            xxxxxxxxxxxxxxxxxxxx
+          </p>
+
+          <div class="map-container">
+            <div id="mapid"></div>
+
+            <footer>
+              <a href="">Ver rotas no Google Maps</a>
+            </footer>
+          </div>
+
+          <hr />
+
+          <h2>Informações sobre o ponto</h2>
+
+          <p>Você pode contribuir com ração e água e muito amor =D</p>
+
+          <div class="open-details">
+            <div class="hour">
+              <div class="topo-open-details">
+                <div class="icon">
+                  <img src="./public/images/clock.svg" alt="Horários" />
+                </div>
+                <div class="title">
+                  <h3>Último abastecimento</h3>
+                </div>
+              </div>
+              <div class="content">
+                <p>28/05/2023 às 14:00</p>
+              </div>
+            </div>
+            
+
+            <div class="open-on-weekends">
+              <img src="./public/images/info.svg" alt="Informações" />
+              Venha sempre que puder!
+            </div>
+          </div>
+
+          <button class="primary-button" type="button">
+            <img src="./public/images/whatsapp.svg" alt="Chamar no WhatsApp" />
+            Entrar em Contato
+          </button>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <script src="./public/scripts/page-stop.js"></script>
+</body>
+
 </html>
