página de cadastro de petstops com forms  e mapa

--- a/stops.html
+++ b/stops.html
@@ -51,7 +51,7 @@
       <div id="mapid" class="animate-appear"></div>
 
       <a
-        href="create-stops.html"
+        href="create-stop.html"
         class="create-stops"
         title="Cadastre um ponto de Alimentaçao"
       >
