--- a/stop.html
+++ b/stop.html
@@ -16,6 +16,9 @@
   <link rel="icon" href="./public/images/logo-icon.png" />
   <link rel="stylesheet" href="./public/css/main.css" />
   <link rel="stylesheet" href="./public/css/animations.css" />
+  <link rel="stylesheet" href="./public/css/sidebar.css" />
+  <link rel="stylesheet" href="./public/css/map.css" />
+  <link rel="stylesheet" href="./public/css/buttons.css" />
   <link rel="stylesheet" href="./public/css/page-stop.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
