--- a/create-stop.html
+++ b/create-stop.html
@@ -52,7 +52,8 @@
 
           <div class="map-container">
             <div id="mapid"></div>
-
+            <input type="hidden" name="lat"/>
+            <input type="hidden" name="lng"/>
             <footer>
               <a href="#" id="select-point">
                 Clique no mapa para adicionar a localização
@@ -82,13 +83,13 @@
 
               <div class="new-upload">
                 <input name="images" placeholder="Cole o link da foto aqui" required />
-                <span>
+                <span onclick="deleteField(event)">
                   <img src="./public/images/remove-file.svg" alt="Remover Foto">
                 </span>
               </div>
 
             </div>
-            <button type="button">
+            <button onclick="addPhotoField()" type="button">
               <img src="./public/images/add-file.svg" alt="Adicionar foto">
             </button>
           </div>
@@ -99,16 +100,22 @@
 
           <div class="input-block">
             <label for="petstop-hidtatacao-alimentação">Qual ponto deseja cadastrar?</label>
-            <input type="hidden" id="petstop-hidtatacao-alimentação" name="petstop-hidtatacao-alimentação" value="1" required/>
+            <input 
+            type="hidden" 
+            id="petstop-hidtatacao-alimentação" 
+            name="petstop-hidtatacao-alimentação" 
+            value="1" 
+            required
+            />
 
             <div class="button-select">
-              <button type="button" id="button-hidratacao">
+              <button data-value="1" onclick="toggleSelect(event)" type="button" id="button-hidratacao">
                 Hidratação
               </button>
-              <button type="button" id="button-alimentacao">
+              <button data-value="2" onclick="toggleSelect(event)" type="button" id="button-alimentacao">
                 Alimentação
               </button>
-              <button type="button" id="button-ambos" class="active">
+              <button data-value="3" onclick="toggleSelect(event)" type="button" id="button-ambos" class="active">
                 Ambos
               </button>
             </div>
