autocomplete do endereço do form

--- a/create-stop.html
+++ b/create-stop.html
@@ -62,12 +62,33 @@
           </div>
 
           <div class="input-block">
-            <label for="name">Nome</label>
-            <input id="name" name="name" required/>
+            <label for="endereco">Endereço</label>
+            <input id="endereco" name="endereco" required/>
           </div>
 
           <div class="input-block">
-            <label for="about">Sobre <span>Máximo de 300 caracteres</span></label>
+            <label for="numero">Número</label>
+            <input id="numero" placeholder="0" name="numero" required/>
+          </div>
+
+          <!-- <div class="input-block">
+            <label for="cep">CEP</label>
+            <input id="cep" name="cep" required/>
+          </div> -->
+
+          <div class="input-block">
+            <label for="cidade">Cidade</label>
+            <input id="cidade" name="cidade" required/>
+          </div>
+
+          <div class="input-block">
+            <label for="estado">Estado</label>
+            <input id="estado" name="estado" required/>
+          </div>
+
+
+          <div class="input-block">
+            <label for="ponto-referencia">Ponto de Referência <span>Máximo de 100 caracteres</span></label>
             <textarea id="about" name="about" required></textarea>
           </div>
 
